<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".layout_final">


    <ImageView
        android:id="@+id/final_imageView"
        android:layout_width="352dp"
        android:layout_height="146dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />



    <MultiAutoCompleteTextView
        android:id="@+id/final_result_textView"
        android:layout_width="315dp"
        android:layout_height="161dp"
        android:layout_marginTop="20dp"
        android:text="MultiAutoCompleteTextView"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/final_imageView" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="315dp"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:text="@string/share"
        app:backgroundTint="@android:color/darker_gray"
        app:icon="@android:drawable/ic_dialog_email"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go_to_strat_button"
        app:layout_constraintVertical_bias="0.0"
        app:rippleColor="@android:color/darker_gray" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="315dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:text="@string/b_back"
        app:backgroundTint="@android:color/darker_gray"
        app:icon="@android:drawable/ic_media_previous"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toTopOf="@+id/go_to_strat_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/final_result_textView"
        app:layout_constraintVertical_bias="1.0"
        app:rippleColor="@android:color/darker_gray" />

    <Button
        android:id="@+id/go_to_strat_button"
        android:layout_width="315dp"
        android:layout_height="41dp"
        android:layout_marginTop="50dp"
        android:text="@string/go_to_start"
        app:backgroundTint="@android:color/darker_gray"
        app:icon="@android:drawable/ic_menu_revert"
        app:iconGravity="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/final_result_textView"
        app:rippleColor="@android:color/darker_gray" />

</androidx.constraintlayout.widget.ConstraintLayout>